# skku-swe2025

./: README.md  package-lock.json  package.json
.github/workflows/: python-tests.yml
src/lib/server/: .dockerignore  .env  .gitignore  Dockerfile  README.md  chatbot.py  dev.py  embed.py  load_model.py  main.py  pyproject.toml  requirements.txt
src/lib/server/data/: t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt
src/lib/server/database/faiss/: index.faiss  index.pkl
src/lib/server/sample/: README.md  t1.txt
src/routes/: +page.svelte  SentenceBox.svelte
src/routes/api/answer/: +server.js
static/: style.css
